# art_studio_tz

./: .gitignore  README.md  index.html  pyproject.toml  quotes.csv  requirement.txt  requirements.txt
.github/workflows/: ci.ymi  ci.yml
app_quote/: __init__.py  api.py  cli.py  db.py
art_studio_tz/: __init__.py  api.py  cli.py  db_sql.py
docs/coverage_html_report/: class_index.html  function_index.html  index.html  status.json  z_a44f0ac069e85531_test_api_py.html  z_a44f0ac069e85531_test_cli_py.html  z_a44f0ac069e85531_test_db_py.html  z_a44f0ac069e85531_test_db_sql_py.html  z_e35f02993a37d579___init___py.html  z_e35f02993a37d579_api_py.html  z_e35f02993a37d579_cli_py.html  z_e35f02993a37d579_db_py.html  z_e35f02993a37d579_db_sql_py.html
tests/: test_api.py  test_cli.py  test_db.py  test_db_sql.py
wordpress/: random-quote.php
